@@ -1,3 +1,11 @@
+2010-04-19  version 0.16 Mark Frost
+
+    * Fixed a hanging issue that came up under certain scenarios. 
+
+2010-04-19  version 0.15 Mark Frost
+
+    * Added some quotes whose absence was causing one of the original tests to fail. 
+
 2010-04-16  version 0.14 Mark Frost
 
     * Fixed an endless read-wait scenario introduced in 0.13
